# Botright

./: .flake8  .gitignore  404.html  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  HISTORY.md  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.py  requirements.txt  search.html  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: FUNDING.yml  rename_project.sh
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml  tests.yml
botright/: VERSION  __init__.py  __main__.py  base.py  botright.py  cli.py  extended_typing.py  index.html
botright/WebRTC-Leak-Shield/: manifest.json  popup.html
botright/WebRTC-Leak-Shield/js/: background.js  popup.js
botright/WebRTC-Leak-Shield/styles/: styles.css
botright/fingerprint_generator/: __init__.py  bayesian_network.py  fingerprint.py
botright/modules/: __init__.py  faker.py  geetest.py  geetest_helpers.py  hcaptcha.py  names.txt  passwords.txt  proxy_manager.py  recaptcha.py
botright/modules/hcaptcha_challenger/: __init__.py  core.py  settings.py  update.py
botright/modules/hcaptcha_challenger/solutions/: kernel.py
botright/modules/playwright_mock/: __init__.py  browser.py  element_handle.py  frame.py  frame_locator.py  js_handle.py  locator.py  mouse.py  page.py
botright/modules/recaptcha_model/: __init__.py  keras_model.h5  labels.txt
botright/modules/recaptcha_model/old/v1/: keras_model.h5  labels.txt
botright/modules/recaptcha_model/old/v2/: keras_model.h5  labels.txt
botright/modules/tmp_dir/record_json/: image_label_area_select.point.Please click on the rabbit's eye.default.json  image_label_binary.None.Please click each image containing a mean of transportation.json
botright/playwright_mock/: __init__.py  browser.py  element_handle.py  frame.py  frame_locator.py  handles.py  keyboard.py  locator.py  mouse.py  page.py  routes.py
docs/: HISTORY.md  botright.md  botright.rst  index.md  index.rst
search/: search_index.json
tests/: conftest.py  dev_test.py  server.py  test.py  test_base.py  test_geetestv3.py  test_geetestv4.py  test_hcaptcha.py  test_recaptcha.py  test_webrtc.py  utils.py
tests/assets/: beforeunload.html  dom.html  error.html  grid.html  offscreenbuttons.html  shadow.html  title.html
tests/assets/frames/: frame.html  frameset.html  nested-frames.html  two-frames.html
tests/assets/input/: mouse-helper.js  select.html
tests/assets/popup/: popup.html  window-open.html
tests/playwright_tests/: __init__.py  test_browsercontext.py  test_browsercontext_events.py  test_element_handle.py  test_element_handle_wait_for_element_state.py  test_frames.py  test_jshandle.py  test_locators.py  test_page.py
(+2 files in other folders)
