[metadata]
name = botright
version = attr: botright.VERSION
description = Botright, the most advance undetected, fingerprint-changing, captcha-solving, open-source automation framework. Build on Playwright, its as easy to use as it is to extend your code. Solving your Captchas for free with AI.
long_description = file: README.md
long_description_content_type = text/markdown
author = Vinyzu
url = https://github.com/Vinyzu/Botright
license = GNU General Public License v3.0
license_file = LICENSE
keywords = botright, playwright, browser, automation, recaptcha_challenger, recaptcha-solver, hcaptcha_challenger, hcaptcha-solver, geetest_challenger, geetest-solver
project_urls =
    Source = https://github.com/Vinyzu/Botright
    Documentation = https://github.com/Vinyzu/Botright/blob/main/docs/index.rst
    Tracker = https://github.com/Vinyzu/Botright/issues
classifiers =
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP :: Browsers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
zip_safe = no
python_requires = >=3.8
packages = find:
install_requires =
    async_class
    httpx>=0.24.1
    playwright>=1.40.0
    undetected-playwright-patch
    pybrowsers>=0.5.2
    chrome-fingerprints
    numpy
    hcaptcha_challenger>=0.10.1.post1
    recognizer
    setuptools
    loguru

# GeeTest Removed
#    scipy>=1.11.2
#    yolov5
#    easyocr==1.7.1
#    sentence_transformers
#    opencv-python~=4.8.0.76
#    Pillow


[options.package_data]
* = requirements.txt, geetest.torchscript

[options.packages.find]
include = botright, botright.*, LICENSE
exclude = tests, .github

[options.extras_require]
testing =
    pytest
    mypy
    flake8
    black
    isort
